--- a/ativos.html
+++ b/ativos.html
@@ -109,7 +109,7 @@
 <body>
 <header>
   <a href="index.html">Início</a>
-  <a href="cadastrar.html">Cadastrar Funcionário</a>
+  <a href="cadastro.html">Cadastrar Funcionário</a>
   <a href="ativos.html">Funcionários Ativos</a>
   <a href="inativos.html">Funcionários Inativos</a>
   <a href="ferias.html">Lançar Férias</a>
