--- a/inativos.html
+++ b/inativos.html
@@ -2,84 +2,60 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Funcionários Inativos</title>
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
       background-color: #ffe6f0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
     }
-
     nav {
       display: flex;
       justify-content: center;
-      gap: 10px;
       background-color: #ff66b2;
-      width: 100%;
       padding: 10px;
-      box-sizing: border-box;
     }
-
     nav a {
-      background-color: white;
-      color: #ff66b2;
+      color: white;
+      margin: 0 10px;
       text-decoration: none;
-      padding: 10px 20px;
-      border-radius: 10px;
       font-weight: bold;
+      background-color: #ff99cc;
+      padding: 10px 15px;
+      border-radius: 10px;
     }
-
-    nav a:hover {
-      background-color: #ffe6f0;
-    }
-
     .container {
+      max-width: 800px;
+      margin: 30px auto;
       background: white;
       padding: 20px;
       border-radius: 15px;
-      margin-top: 30px;
-      width: 90%;
-      max-width: 800px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      text-align: center;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
+      margin-top: 15px;
     }
-
     th, td {
-      border: 1px solid #ccc;
       padding: 10px;
-      text-align: left;
+      border: 1px solid #ddd;
+      text-align: center;
     }
-
-    th {
-      background-color: #ffb3d9;
-    }
-
     button {
-      margin: 5px;
-      padding: 5px 10px;
-      border: none;
       background-color: #ff66b2;
       color: white;
+      border: none;
+      padding: 5px 10px;
+      margin: 2px;
       border-radius: 5px;
       cursor: pointer;
     }
-
-    button:hover {
-      background-color: #ff3385;
-    }
-
-    .sort {
+    select {
       margin-top: 10px;
+      padding: 5px;
+      border-radius: 5px;
     }
   </style>
 </head>
@@ -94,16 +70,17 @@
     <a href="aviso.html">Aviso Prévio</a>
     <a href="relatorio.html">Gerar Relatório</a>
   </nav>
+
   <div class="container">
-    <h1>Funcionários Inativos</h1>
-    <div class="sort">
-      <label>Ordenar por:</label>
-      <select id="ordenar" onchange="ordenarInativos()">
-        <option value="nome">Nome (A-Z)</option>
-        <option value="data">Data de Demissão (Mais recente)</option>
-      </select>
-    </div>
-    <table id="tabelaInativos">
+    <h2>Funcionários Inativos</h2>
+
+    <label for="ordenar">Ordenar por:</label>
+    <select id="ordenar">
+      <option value="nome">Nome (A-Z)</option>
+      <option value="data">Data de Demissão (Mais recente)</option>
+    </select>
+
+    <table>
       <thead>
         <tr>
           <th>Nome</th>
@@ -114,64 +91,55 @@
           <th>Ações</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody id="listaInativos"></tbody>
     </table>
   </div>
 
   <script>
-    function carregarInativos() {
-      const lista = JSON.parse(localStorage.getItem("inativos")) || [];
-      const tbody = document.querySelector("#tabelaInativos tbody");
-      tbody.innerHTML = "";
+    const lista = document.getElementById("listaInativos");
+    const ordenar = document.getElementById("ordenar");
 
-      lista.forEach((item, index) => {
+    function carregarInativos() {
+      const dados = JSON.parse(localStorage.getItem("inativos")) || [];
+
+      if (ordenar.value === "nome") {
+        dados.sort((a, b) => a.nome.localeCompare(b.nome));
+      } else {
+        dados.sort((a, b) => new Date(b.data) - new Date(a.data));
+      }
+
+      lista.innerHTML = "";
+      dados.forEach((pessoa, index) => {
         const tr = document.createElement("tr");
+
         tr.innerHTML = `
-          <td>${item.nome}</td>
-          <td>${item.cpf}</td>
-          <td>${item.data}</td>
-          <td>${item.motivo}</td>
-          <td>${item.local}</td>
-          <td>
-            <button onclick="editar(${index})">Editar</button>
-            <button onclick="excluir(${index})">Excluir</button>
-          </td>
+          <td><input value="${pessoa.nome}" onchange="editarCampo(${index}, 'nome', this.value)" /></td>
+          <td><input value="${pessoa.cpf}" onchange="editarCampo(${index}, 'cpf', this.value)" /></td>
+          <td><input type="date" value="${pessoa.data}" onchange="editarCampo(${index}, 'data', this.value)" /></td>
+          <td><input value="${pessoa.motivo}" onchange="editarCampo(${index}, 'motivo', this.value)" /></td>
+          <td><input value="${pessoa.local}" onchange="editarCampo(${index}, 'local', this.value)" /></td>
+          <td><button onclick="excluir(${index})">Excluir</button></td>
         `;
-        tbody.appendChild(tr);
+        lista.appendChild(tr);
       });
     }
 
-    function editar(index) {
-      const lista = JSON.parse(localStorage.getItem("inativos")) || [];
-      const item = lista[index];
-      const novoNome = prompt("Editar Nome:", item.nome);
-      if (novoNome !== null) {
-        item.nome = novoNome;
-        localStorage.setItem("inativos", JSON.stringify(lista));
-        carregarInativos();
-      }
+    function editarCampo(index, campo, valor) {
+      const dados = JSON.parse(localStorage.getItem("inativos")) || [];
+      dados[index][campo] = valor;
+      localStorage.setItem("inativos", JSON.stringify(dados));
+      carregarInativos(); // atualiza visual
     }
 
     function excluir(index) {
-      const lista = JSON.parse(localStorage.getItem("inativos")) || [];
-      lista.splice(index, 1);
-      localStorage.setItem("inativos", JSON.stringify(lista));
+      const dados = JSON.parse(localStorage.getItem("inativos")) || [];
+      dados.splice(index, 1);
+      localStorage.setItem("inativos", JSON.stringify(dados));
       carregarInativos();
     }
 
-    function ordenarInativos() {
-      const criterio = document.getElementById("ordenar").value;
-      const lista = JSON.parse(localStorage.getItem("inativos")) || [];
-      if (criterio === "nome") {
-        lista.sort((a, b) => a.nome.localeCompare(b.nome));
-      } else {
-        lista.sort((a, b) => new Date(b.data) - new Date(a.data));
-      }
-      localStorage.setItem("inativos", JSON.stringify(lista));
-      carregarInativos();
-    }
-
-    window.onload = carregarInativos;
+    ordenar.addEventListener("change", carregarInativos);
+    carregarInativos();
   </script>
 </body>
 </html>
